# langchain-learning

./: main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: DataIngestion-checkpoint.ipynb
Data/: employee.json  products.csv  products.xlsx  products_excel.xlsx  sample_document.docx  sample_text.txt  sample_text2.txt
Notebooks/: 2-faiss.ipynb  DataIngestion.ipynb  HybridSearchStrategies.ipynb  SemanticChunking.ipynb  VectorEmbedding.ipynb  VectorStore.ipynb
Notebooks/chroma_db/: chroma.sqlite3
